credentials encryption added

--- a/SfLogger/SfLogger.csproj
+++ b/SfLogger/SfLogger.csproj
@@ -71,6 +71,7 @@
       <HintPath>..\packages\Microsoft.Net.Http.2.2.28\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -89,6 +90,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="EncryptionHelper.cs" />
     <Compile Include="ObservableQueue.cs" />
     <Compile Include="SFConnection.cs" />
     <Compile Include="Web References\tooling32\Reference.cs">
